# smarteye_embedded_ros

./: CMakeLists.txt  README.md  package.xml
doc/: optimating_ubuntu_net.md  sdk_interface.md
launch/: smarteye_demo.launch
rviz/: smart_eye.rviz
smart_eye_sdk/doc/docAPI/: Embedded Binocular Camera_API Document Instructions.docx  linux_udp_buffer_set.docx
smart_eye_sdk/include/: emCommon_type.h  emController.h  emPointCloudOperation.h
smart_eye_sdk/samples/samples00_imaging/: CMakeLists.txt  emSmarteyeAPI.cpp  emSmarteyeAPInoPCL.cpp  generate_demo.sh
src/: smarteye_demo.cpp  smarteye_ros_demo.cpp
